remove babel until we know it is needed

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,5 +12,5 @@
       "@mui/styled-engine": ["./node_modules/@mui/styled-engine-sc"]
     }
   },
-  "exclude": ["node_modules"]
+  "exclude": ["node_modules", "public"]
 }
