Everything, everywhere all at once

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,7 @@
     "esModuleInterop": true,
     "jsx": "react",
     "moduleResolution": "node",
+    "resolveJsonModule": true,
     "lib": ["dom", "dom.iterable", "esnext"],
     "strict": true,
     "sourceMap": true,
