--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@babel/preset-react": "^7.18.6",
     "@babel/preset-typescript": "^7.18.6",
     "@testing-library/react": "^13.3.0",
+    "@types/geojson": "^7946.0.10",
     "@types/jest": "^28.1.3",
     "@types/react": "^18.0.14",
     "@types/react-dom": "^18.0.5",
@@ -47,6 +48,8 @@
     "axios": "^0.27.2",
     "date-fns": "^2.29.1",
     "file-loader": "^6.2.0",
+    "geojson-apply-right-hand-rule": "^1.0.7",
+    "geojson-bounding-box": "^0.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.3.0",
