--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -43,7 +43,7 @@ npm-test:
   script:
     - npm run test
 
-build-prod:
+.build:
   stage: build
   variables:
     REGISTRY_IMAGE: '${CI_REGISTRY_IMAGE}'
@@ -53,10 +53,16 @@ build-prod:
     - k8s-root
   script:
     - docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY
-    - docker build -t ${REGISTRY_IMAGE}:${CI_COMMIT_TAG} -f ${DOCKERFILE} ${BUILD_CONTEXT_DIR}
-    - docker push ${REGISTRY_IMAGE}:${CI_COMMIT_TAG}
+    - docker build -t ${REGISTRY_IMAGE}:latest -f ${DOCKERFILE} ${BUILD_CONTEXT_DIR}
+    - docker push ${REGISTRY_IMAGE}:latest
     - mkdir .images
-    - echo "${REGISTRY_IMAGE}:${CI_COMMIT_TAG}" > .images/${CI_JOB_NAME}
+    - echo "${REGISTRY_IMAGE}:latest" > .images/${CI_JOB_NAME}
   artifacts:
     paths:
       - .images/${CI_JOB_NAME}
+
+annotated_atlas:
+  extends: .build
+  variables:
+    REGISTRY_IMAGE: "${CI_REGISTRY_IMAGE}/${CI_JOB_NAME}"
+    DOCKERFILE: Dockerfile
