--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -61,7 +61,7 @@ npm-test:
     paths:
       - .images/${CI_JOB_NAME}
 
-annotated_atlas:
+annotated atlas:
   extends: .build
   variables:
     REGISTRY_IMAGE: "${CI_REGISTRY_IMAGE}/${CI_JOB_NAME}"
