--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -18,6 +18,8 @@ stages:
   artifacts:
     paths:
       - .images/${CI_JOB_NAME}
+  rules: &buildrules
+    - if: '$CI_COMMIT_TAG =~ /^v[0-9]/'
 
 annotated_atlas:
   extends: .build
