--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,17 +4,17 @@ stages:
 .build:
   stage: build
   variables:
-    REGISTRY_IMAGE: '${CI_REGISTRY_IMAGE}'
+    REGISTRY_IMAGE: "${CI_REGISTRY_IMAGE}"
     DOCKERFILE: Dockerfile
     BUILD_CONTEXT_DIR: .
   tags:
     - k8s-root
   script:
     - docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY
-    - docker build -t ${REGISTRY_IMAGE} -f ${DOCKERFILE} ${BUILD_CONTEXT_DIR}
-    - docker push ${REGISTRY_IMAGE}
+    - docker build -t ${REGISTRY_IMAGE}:${CI_COMMIT_TAG} -f ${DOCKERFILE} ${BUILD_CONTEXT_DIR}
+    - docker push ${REGISTRY_IMAGE}:${CI_COMMIT_TAG}
     - mkdir .images
-    - echo "${REGISTRY_IMAGE}" > .images/${CI_JOB_NAME}
+    - echo "${REGISTRY_IMAGE}:${CI_COMMIT_TAG}" > .images/${CI_JOB_NAME}
   artifacts:
     paths:
       - .images/${CI_JOB_NAME}
@@ -24,5 +24,5 @@ stages:
 annotated_atlas:
   extends: .build
   variables:
-    REGISTRY_IMAGE: '${CI_REGISTRY_IMAGE}/${CI_JOB_NAME}'
+    REGISTRY_IMAGE: "${CI_REGISTRY_IMAGE}/${CI_JOB_NAME}"
     DOCKERFILE: Dockerfile
