--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -21,7 +21,7 @@ stages:
   rules: &buildrules
     - if: '$CI_COMMIT_TAG =~ /^v[0-9]/'
 
-annotated-atlas:
+annotated_atlas:
   extends: .build
   variables:
     REGISTRY_IMAGE: "${CI_REGISTRY_IMAGE}/${CI_JOB_NAME}"
