--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -46,7 +46,7 @@ npm-test:
 .build:
   stage: build
   variables:
-    REGISTRY_IMAGE: "${CI_REGISTRY_IMAGE}"
+    REGISTRY_IMAGE: '${CI_REGISTRY_IMAGE}'
     DOCKERFILE: Dockerfile
     BUILD_CONTEXT_DIR: .
   tags:
@@ -61,9 +61,8 @@ npm-test:
     paths:
       - .images/${CI_JOB_NAME}
 
-
 annotated_atlas:
   extends: .build
   variables:
-    REGISTRY_IMAGE: "${CI_REGISTRY_IMAGE}/${CI_JOB_NAME}"
+    REGISTRY_IMAGE: '${CI_REGISTRY_IMAGE}/${CI_JOB_NAME}'
     DOCKERFILE: Dockerfile
