--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,14 +11,15 @@ stages:
     - k8s-root
   script:
     - docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY
-    - docker build -t ${REGISTRY_IMAGE}:latest -f ${DOCKERFILE} ${BUILD_CONTEXT_DIR}
-    - docker push ${REGISTRY_IMAGE}:latest
+    - docker build -t ${REGISTRY_IMAGE}:${CI_COMMIT_TAG} -f ${DOCKERFILE} ${BUILD_CONTEXT_DIR}
+    - docker push ${REGISTRY_IMAGE}:${CI_COMMIT_TAG}
     - mkdir .images
-    - echo "${REGISTRY_IMAGE}:latest" > .images/${CI_JOB_NAME}
+    - echo "${REGISTRY_IMAGE}:${CI_COMMIT_TAG}" > .images/${CI_JOB_NAME}
   artifacts:
     paths:
       - .images/${CI_JOB_NAME}
-
+    rules: &buildrules
+    - if: '$CI_COMMIT_TAG =~ /^v[0-9]/'
 
 annotated_atlas:
   extends: .build
