--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "babel-jest": "^28.1.1",
     "copy-webpack-plugin": "^11.0.0",
     "css-loader": "^6.7.1",
+    "dotenv-webpack": "^8.0.1",
     "html-loader": "^3.1.2",
     "html-webpack-plugin": "^5.5.0",
     "jest": "^28.1.1",
@@ -53,6 +54,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.3.0",
+    "react-scripts": "^5.0.1",
     "react-select": "^5.4.0"
   }
 }
