--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -12,15 +12,42 @@ stages:
     - k8s-root
   script:
     - docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY
-    - docker build -t ${REGISTRY_IMAGE}:${CI_COMMIT_TAG} -f ${DOCKERFILE} ${BUILD_CONTEXT_DIR}
-    - docker push ${REGISTRY_IMAGE}:${CI_COMMIT_TAG}
+    - docker build -t ${REGISTRY_IMAGE}:${CI_COMMIT_SHA} -f ${DOCKERFILE} ${BUILD_CONTEXT_DIR}
+    - docker push ${REGISTRY_IMAGE}:${CI_COMMIT_SHA}
     - mkdir .images
-    - echo "${REGISTRY_IMAGE}:${CI_COMMIT_TAG}" > .images/${CI_JOB_NAME}
+    - echo "${REGISTRY_IMAGE}:${CI_COMMIT_SHA}" > .images/${CI_JOB_NAME}
   artifacts:
     paths:
       - .images/${CI_JOB_NAME}
   rules: &buildrules
     - if: '$CI_COMMIT_TAG =~ /^v[0-9]/'
+
+.release:
+  stage: release
+  image: registry.met.no/k8s/tools/kustomize-cd:0.4.0
+  tags:
+    - k8s-unpriv
+  variables:
+    EXCLUDE_MAINTAINERS: '["miguelsn", "audunmg", "sebastianj"]'
+    ENVIRONMENT: 'staging'
+    AUTO_RELEASE: 'true'
+  script:
+    - 'echo app.gitlab.com/app: ${CI_PROJECT_PATH_SLUG}'
+    - 'echo app.gitlab.com/env: ${CI_ENVIRONMENT_SLUG}'
+    - release --repo https://gitlab.met.no/tjenester/annotated-atlas.git
+      --access-token "${TJENESTE_ACCESS_TOKEN}"
+      --automatic "$AUTO_RELEASE"
+      --environment "$ENVIRONMENT"
+      --updates-dir .images
+      --exclude-maintainers "$EXCLUDE_MAINTAINERS"
+
+staging:
+  extends: .release
+  variables:
+    ENVIRONMENT: 'staging'
+    AUTO_RELEASE: 'true'
+  rules:
+    - if: '$CI_COMMIT_BRANCH == "main"'
 
 annotated_atlas:
   extends: .build
