--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -47,7 +47,7 @@ developing:
     ENVIRONMENT: 'developing'
     AUTO_RELEASE: 'true'
   rules:
-    - if: '$CI_COMMIT_BRANCH == "main"'
+    - if: '$CI_COMMIT_BRANCH == "master"'
 
 annotated_atlas:
   extends: .build
