updated README.md with comments about the .env-file

--- a/.env
+++ b/.env
@@ -1,2 +1,6 @@
+# If you need to run against another backend/database you have set up on your own system you have to edit
+# this file to point to the right address.
+
+# REACT_APP_BASEURL=address_of_your_system
 
 REACT_APP_BASEURL=https://test.metcap.met.no/api/v1/cap
