--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,7 +2,7 @@ stages:
   - build
   - release
 
-.build:
+build:
   stage: build
   variables:
     REGISTRY_IMAGE: '${CI_REGISTRY_IMAGE}'
@@ -14,19 +14,8 @@ stages:
     - docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY
     - docker build -t ${REGISTRY_IMAGE}:${CI_COMMIT_TAG} -f ${DOCKERFILE} ${BUILD_CONTEXT_DIR}
     - docker push ${REGISTRY_IMAGE}:${CI_COMMIT_TAG}
-    - mkdir .images
-    - echo "${REGISTRY_IMAGE}:${CI_COMMIT_TAG}" > .images/${CI_JOB_NAME}
-  artifacts:
-    paths:
-      - .images/${CI_JOB_NAME}
   rules: &buildrules
     - if: '$CI_COMMIT_TAG =~ /^v[0-9]/'
-
-annotated_atlas:
-  extends: .build
-  variables:
-    REGISTRY_IMAGE: '${CI_REGISTRY_IMAGE}/${CI_JOB_NAME}'
-    DOCKERFILE: Dockerfile
 
 tjenester/annotated-atlas:
   stage: release
