Added map functionality React-Leaflet

--- a/.env
+++ b/.env
@@ -3,4 +3,9 @@
 
 # REACT_APP_BASEURL=address_of_your_system
 
+# test er på int skal ut på ext
 REACT_APP_BASEURL=https://test.metcap.met.no/api/v1/cap
+
+
+# a er på ext
+# REACT_APP_BASEURL=https://a.metcap.met.no/api/v1/cap
