--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@testing-library/react": "^13.3.0",
     "@types/geojson": "^7946.0.10",
     "@types/jest": "^28.1.3",
+    "@types/leaflet": "^1.8.0",
     "@types/react": "^18.0.14",
     "@types/react-dom": "^18.0.5",
     "babel-jest": "^28.1.1",
@@ -51,8 +52,10 @@
     "file-loader": "^6.2.0",
     "geojson-apply-right-hand-rule": "^1.0.7",
     "geojson-bounding-box": "^0.2.0",
+    "leaflet": "^1.9.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-leaflet": "^4.1.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.1",
     "react-select": "^5.4.0"
