--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/leaflet": "^1.8.0",
     "@types/react": "^18.0.14",
     "@types/react-dom": "^18.0.5",
+    "@types/react-leaflet": "^2.8.2",
     "babel-jest": "^28.1.1",
     "copy-webpack-plugin": "^11.0.0",
     "css-loader": "^6.7.1",
