Work on S-ENDA data

--- a/.env
+++ b/.env
@@ -6,6 +6,8 @@
 # test er på int skal ut på ext
 REACT_APP_BASEURL=https://test.metcap.met.no/api/v1/cap
 
-
 # a er på ext
 # REACT_APP_BASEURL=https://a.metcap.met.no/api/v1/cap
+
+# Location of S-ENDA
+REACT_APP_SENDA_URL=https://csw.s-enda.k8s.met.no
