--- a/.env
+++ b/.env
@@ -10,4 +10,5 @@ REACT_APP_BASEURL=https://test.metcap.met.no/api/v1/cap
 # REACT_APP_BASEURL=https://a.metcap.met.no/api/v1/cap
 
 # Location of S-ENDA
-REACT_APP_SENDA_URL=https://csw.s-enda.k8s.met.no
+#REACT_APP_SENDA_URL=https://csw.s-enda.k8s.met.no
+REACT_APP_SENDA_URL=https://csw-dev.s-enda.k8s.met.no
