--- a/.gitignore
+++ b/.gitignore
@@ -7,10 +7,15 @@
 /dist
 
 # misc
+package-lock.json
+
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
 .eslintcache
+
+.idea/
+.idea/workspace.x
 
 npm-debug.log*
