--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "react-leaflet": "^4.1.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.1",
-    "react-select": "^5.4.0"
+    "react-select": "^5.4.0",
+    "xml-loader": "^1.2.1"
   }
 }
