--- a/package.json
+++ b/package.json
@@ -13,54 +13,54 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@babel/preset-env": "^7.18.6",
+    "@babel/preset-env": "^7.20.2",
     "@babel/preset-react": "^7.18.6",
-    "@babel/preset-typescript": "^7.18.6",
-    "@testing-library/react": "^13.3.0",
+    "@babel/preset-typescript": "^7.21.0",
+    "@testing-library/react": "^14.0.0",
     "@types/geojson": "^7946.0.10",
-    "@types/jest": "^28.1.3",
-    "@types/leaflet": "^1.8.0",
-    "@types/react": "^18.0.14",
-    "@types/react-dom": "^18.0.5",
-    "@types/react-leaflet": "^2.8.2",
-    "babel-jest": "^28.1.1",
+    "@types/jest": "^29.4.0",
+    "@types/leaflet": "^1.9.1",
+    "@types/react": "^18.0.28",
+    "@types/react-dom": "^18.0.11",
+    "@types/react-leaflet": "^2.8.3",
+    "babel-jest": "^29.4.3",
     "copy-webpack-plugin": "^11.0.0",
-    "css-loader": "^6.7.1",
+    "css-loader": "^6.7.3",
     "dotenv-webpack": "^8.0.1",
-    "html-loader": "^3.1.2",
+    "html-loader": "^4.2.0",
     "html-webpack-plugin": "^5.5.0",
-    "jest": "^28.1.1",
-    "jest-environment-jsdom": "^28.1.1",
-    "mini-css-extract-plugin": "^2.6.1",
+    "jest": "^29.4.3",
+    "jest-environment-jsdom": "^29.4.3",
+    "mini-css-extract-plugin": "^2.7.2",
     "path": "^0.12.7",
-    "prettier": "2.7.1",
+    "prettier": "2.8.4",
     "react-test-renderer": "^18.2.0",
-    "ts-jest": "^28.0.5",
-    "ts-loader": "^9.3.1",
-    "typescript": "^4.7.4",
-    "webpack": "^5.73.0",
-    "webpack-cli": "^4.10.0",
-    "webpack-dev-server": "^4.9.2"
+    "ts-jest": "^29.0.5",
+    "ts-loader": "^9.4.2",
+    "typescript": "^4.9.5",
+    "webpack": "^5.75.0",
+    "webpack-cli": "^5.0.1",
+    "webpack-dev-server": "^4.11.1"
   },
   "dependencies": {
-    "@emotion/react": "^11.10.0",
-    "@emotion/styled": "^11.10.0",
-    "@mui/icons-material": "^5.8.4",
-    "@mui/material": "^5.9.3",
-    "@mui/x-date-pickers": "^5.0.0-beta.3",
-    "axios": "^0.27.2",
-    "date-fns": "^2.29.1",
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
+    "@mui/icons-material": "^5.11.9",
+    "@mui/material": "^5.11.10",
+    "@mui/x-date-pickers": "^5.0.20",
+    "axios": "^1.3.4",
+    "date-fns": "^2.29.3",
     "file-loader": "^6.2.0",
     "geojson-apply-right-hand-rule": "^1.0.7",
     "geojson-bounding-box": "^0.2.0",
-    "leaflet": "^1.9.2",
+    "leaflet": "^1.9.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-draggable": "^4.4.5",
-    "react-leaflet": "^4.1.0",
-    "react-router-dom": "^6.3.0",
+    "react-leaflet": "^4.2.0",
+    "react-router-dom": "^6.8.1",
     "react-scripts": "^5.0.1",
-    "react-select": "^5.4.0",
+    "react-select": "^5.7.0",
     "xml-loader": "^1.2.1"
   }
 }
