--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "@mui/x-date-pickers": "^5.0.20",
     "axios": "^1.3.4",
     "date-fns": "^2.29.3",
+    "fast-xml-parser": "^4.1.3",
     "file-loader": "^6.2.0",
     "geojson-apply-right-hand-rule": "^1.0.7",
     "geojson-bounding-box": "^0.2.0",
@@ -60,7 +61,6 @@
     "react-draggable": "^4.4.5",
     "react-leaflet": "^4.2.0",
     "react-router-dom": "^6.8.1",
-
     "react-select": "^5.7.0",
     "xml-loader": "^1.2.1"
   }
