--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "@mui/x-date-pickers": "^5.0.20",
     "axios": "^1.3.4",
     "date-fns": "^2.29.3",
+    "dayjs": "^1.11.7",
     "fast-xml-parser": "^4.1.3",
     "file-loader": "^6.2.0",
     "geojson-apply-right-hand-rule": "^1.0.7",
