--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "react-dom": "^18.2.0",
     "react-draggable": "^4.4.5",
     "react-leaflet": "^4.2.1",
+    "react-oidc-context": "^2.2.2",
     "react-router-dom": "^6.10.0",
     "react-select": "^5.7.2",
     "xml-loader": "^1.2.1"
