--- a/.env
+++ b/.env
@@ -2,14 +2,8 @@
 # this file to point to the right address.
 
 # REACT_APP_BASEURL=address_of_your_system
-
-# test er på int skal ut på ext
-#REACT_APP_BASEURL=https://test.metcap.met.no/api/v1/cap
-#REACT_APP_BASEURL=http://localhost:7532/api/v1/cap
-REACT_APP_BASEURL=https://dev.metcap.met.no/api/v1/cap
-
-# a er på ext
-# REACT_APP_BASEURL=https://a.metcap.met.no/api/v1/cap
+REACT_APP_BASE_CAP_URL=https://dev.metcap.met.no/api/v1/cap
+REACT_APP_BASE_MAP_URL=https://dev.metcap.met.no/api/v1/map
 
 # Location of S-ENDA
 REACT_APP_SENDA_URL=https://csw.s-enda-dev.k8s.met.no
