new senda endpoint and cleanup

--- a/.env
+++ b/.env
@@ -6,4 +6,4 @@ REACT_APP_BASE_CAP_URL=https://test.metcap.met.no/api/v1/cap
 REACT_APP_BASE_MAP_URL=https://test.metcap.met.no/api/v1/map
 
 # Location of S-ENDA
-REACT_APP_SENDA_URL=https://csw.s-enda-dev.k8s.met.no
+REACT_APP_SENDA_URL=https://data.csw.met.no
