test new api endpoints

--- a/.env
+++ b/.env
@@ -2,8 +2,8 @@
 # this file to point to the right address.
 
 # REACT_APP_BASEURL=address_of_your_system
-REACT_APP_BASE_CAP_URL=https://test.metcap.met.no/api/v1/cap
-REACT_APP_BASE_MAP_URL=https://test.metcap.met.no/api/v1/map
+REACT_APP_BASE_CAP_URL=https://dev.metcap.met.no/api/v2/cap
+REACT_APP_BASE_MAP_URL=https://dev.metcap.met.no/api/v2/map
 
 # Location of S-ENDA
 REACT_APP_SENDA_URL=https://data.csw.met.no
