--- a/.env
+++ b/.env
@@ -4,6 +4,7 @@
 # REACT_APP_BASEURL=address_of_your_system
 REACT_APP_BASE_CAP_URL=https://dev.metcap.met.no/api/v2/cap
 REACT_APP_BASE_MAP_URL=https://dev.metcap.met.no/api/v2/map
+REACT_APP_BASE_EVALUATION_URL=https://dev.metcap.met.no/api/v2/evaluations
 
 # Location of S-ENDA
 REACT_APP_SENDA_URL=https://data.csw.met.no
