--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@
 
 # REACT_APP_BASEURL=address_of_your_system
 REACT_APP_BASE_CAP_URL=https://test.metcap.met.no/api/v2/cap
-REACT_APP_BASE_MAP_URL=https://test.metcap.met.no/api/v2/map
+REACT_APP_BASE_MAP_URL=https://test.metcap.met.no/api/v2/lrmap
 REACT_APP_BASE_EVALUATION_URL=https://test.metcap.met.no/api/v2/evaluations
 
 # Location of S-ENDA
